--- a/po/ko.po
+++ b/po/ko.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: gnome-sound-recorder master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-sound-recorder&keywords=I18N+L10N&component=general\n"
 "POT-Creation-Date: 2014-03-07 17:15+0000\n"
-"PO-Revision-Date: 2014-03-08 03:12+0900\n"
+"PO-Revision-Date: 2014-07-09 08:54+0900\n"
 "Last-Translator: Changwoo Ryu <cwryu@debian.org>\n"
 "Language-Team: Korean <gnome-kr@googlegroups.com>\n"
 "Language: ko\n"
@@ -158,7 +158,7 @@ msgstr "취소"
 
 #: ../src/info.js:70 ../src/mainWindow.js:284 ../src/preferences.js:56
 msgid "Done"
-msgstr "오나료"
+msgstr "완료"
 
 #: ../src/info.js:96
 msgctxt "File Name"
