--- a/po/ca.po
+++ b/po/ca.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the gnome-sound-recorder package.
 # Pau Iranzo <paugnu@gmail.com>, 2014.
 # Gil Forcada <gilforcada@guifi.net>, 2014.
+# Jordi Serratosa <jordis@softcatala.cat>, 2017.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-sound-recorder master\n"
 "Report-Msgid-Bugs-To: https://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "sound-recorder&keywords=I18N+L10N&component=General\n"
-"POT-Creation-Date: 2017-06-10 01:36+0000\n"
+"POT-Creation-Date: 2017-08-06 06:05+0000\n"
 "PO-Revision-Date: 2017-07-08 12:47+0200\n"
 "Last-Translator: Jordi Mas <jmas@softcatala.org>\n"
 "Language-Team: Catalan <tradgnome@softcatala.org>\n"
@@ -46,7 +47,7 @@ msgid ""
 "need to worry about accidentally discarding the previous recording."
 msgstr ""
 "L'enregistrador de so gestiona automàticament el procés de desat de manera "
-"que no us hagueu de preocupar de suprimir accidentalment algun "
+"que no us hàgiu de preocupar de suprimir accidentalment algun "
 "enregistrament anterior."
 
 #: ../data/appdata/org.gnome.SoundRecorder.appdata.xml.in.h:5
