--- a/po/ca@valencia.po
+++ b/po/ca@valencia.po
@@ -3,43 +3,60 @@
 # This file is distributed under the same license as the gnome-sound-recorder package.
 # Pau Iranzo <paugnu@gmail.com>, 2014.
 # Gil Forcada <gilforcada@guifi.net>, 2014.
+# Jordi Serratosa <jordis@softcatala.cat>, 2017.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-sound-recorder master\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-09-07 00:17+0200\n"
-"PO-Revision-Date: 2014-09-07 00:16+0200\n"
-"Last-Translator: Gil Forcada <gilforcada@guifi.net>\n"
+"Report-Msgid-Bugs-To: https://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
+"sound-recorder&keywords=I18N+L10N&component=General\n"
+"POT-Creation-Date: 2017-09-10 06:43+0000\n"
+"PO-Revision-Date: 2017-07-08 12:47+0200\n"
+"Last-Translator: Xavi Ivars <xavi.ivars@gmail.com>\n"
 "Language-Team: Catalan <tradgnome@softcatala.org>\n"
-"Language: ca-XV\n"
+"Language: ca-valencia\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bits\n"
+"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Poedit 2.0.1\n"
 
 #: ../data/appdata/org.gnome.SoundRecorder.appdata.xml.in.h:1
-msgid "A simple, modern sound recorder for GNOME"
-msgstr "Un enregistrador de so simple i modern pel GNOME"
+#: ../data/org.gnome.SoundRecorder.desktop.in.in.h:1 ../src/application.js:168
+#: ../src/record.js:120
+msgid "Sound Recorder"
+msgstr "Enregistradora de so"
 
 #: ../data/appdata/org.gnome.SoundRecorder.appdata.xml.in.h:2
+msgid "A simple, modern sound recorder for GNOME"
+msgstr "Un gravadora de so simple i modern pel GNOME"
+
+#: ../data/appdata/org.gnome.SoundRecorder.appdata.xml.in.h:3
 msgid ""
 "Sound Recorder provides a simple and modern interface that provides a "
 "straight-forward way to record and play audio. It allows you to do basic "
 "editing, and create voice memos."
 msgstr ""
-"L'enregistrador de so proporciona una interfície simple i moderna que permet "
-"enregistrar i reproduir àudios. Vos permet fer edicions bàsiques a més a més "
+"L'gravadora de so proporciona una interfície simple i moderna que permet "
+"gravar i reproduir àudios. Vos permet fer edicions bàsiques a més a més "
 "de crear notes de veu."
 
-#: ../data/appdata/org.gnome.SoundRecorder.appdata.xml.in.h:3
+#: ../data/appdata/org.gnome.SoundRecorder.appdata.xml.in.h:4
 msgid ""
 "Sound Recorder automatically handles the saving process so that you do not "
 "need to worry about accidentally discarding the previous recording."
 msgstr ""
-"L'enregistrador de so gestiona automàticament el procés de guardat de manera "
-"que no vos hagueu de preocupar de suprimir accidentalment algun "
-"enregistrament anterior."
+"L'gravadora de so gestiona automàticament el procés de guardat de manera "
+"que no vos hàgeu de preocupar de suprimir accidentalment algun gravació	 "
+"anterior."
+
+#: ../data/appdata/org.gnome.SoundRecorder.appdata.xml.in.h:5
+msgid "Supported audio formats:"
+msgstr "Formats d'àudio admesos:"
+
+#: ../data/appdata/org.gnome.SoundRecorder.appdata.xml.in.h:6
+msgid "Ogg Vorbis, Opus, FLAC, MP3 and MOV"
+msgstr "Ogg Vorbis, Opus, FLAC, MP3 and MOV"
 
 #: ../data/org.gnome.gnome-sound-recorder.gschema.xml.h:1
 msgid "Window size"
@@ -47,7 +64,7 @@ msgstr "Mida de la finestra"
 
 #: ../data/org.gnome.gnome-sound-recorder.gschema.xml.h:2
 msgid "Window size (width and height)."
-msgstr "Mida de la finestra (amplada i alçada)."
+msgstr "Mida de la finestra (amplària i alçària)."
 
 #: ../data/org.gnome.gnome-sound-recorder.gschema.xml.h:3
 msgid "Window position"
@@ -71,39 +88,46 @@ msgstr ""
 "no hi ha cap mapat, s'utilitzaran els paràmetres per defecte del codificador."
 
 #: ../data/org.gnome.gnome-sound-recorder.gschema.xml.h:7
+msgid "Available channels"
+msgstr "Canals disponibles"
+
+#: ../data/org.gnome.gnome-sound-recorder.gschema.xml.h:8
+msgid ""
+"Maps available channels. If there is not no mapping set, stereo channel will "
+"be used by default."
+msgstr ""
+"Mapa els canals disponibles. Si no hi ha cap mapa establit, el canal "
+"estèreo s'utilitzarà per defecte."
+
+#: ../data/org.gnome.gnome-sound-recorder.gschema.xml.h:9
 msgid "Microphone volume level"
 msgstr "Nivell de volum del micròfon"
 
-#: ../data/org.gnome.gnome-sound-recorder.gschema.xml.h:8
+#: ../data/org.gnome.gnome-sound-recorder.gschema.xml.h:10
 msgid "Microphone volume level."
 msgstr "Nivell de volum del micròfon."
 
-#: ../data/org.gnome.gnome-sound-recorder.gschema.xml.h:9
+#: ../data/org.gnome.gnome-sound-recorder.gschema.xml.h:11
 msgid "Speaker volume level"
 msgstr "Nivell de volum de l'altaveu"
 
-#: ../data/org.gnome.gnome-sound-recorder.gschema.xml.h:10
+#: ../data/org.gnome.gnome-sound-recorder.gschema.xml.h:12
 msgid "Speaker volume level."
 msgstr "Nivell de volum de l'altaveu."
 
-#: ../data/org.gnome.SoundRecorder.desktop.in.in.h:1 ../src/application.js:155
-#: ../src/record.js:105
-msgid "Sound Recorder"
-msgstr "Enregistradora de so"
-
 #: ../data/org.gnome.SoundRecorder.desktop.in.in.h:2
 msgid "Record sound via the microphone and play it back"
-msgstr "Enregistra un so mitjançant el micròfon i reprodueix-lo"
+msgstr "Grava un so mitjançant el micròfon i reprodueix-lo"
 
 #: ../data/org.gnome.SoundRecorder.desktop.in.in.h:3
 msgid "Audio;Application;Record;"
-msgstr "àudio;aplicació;enregistrament;"
+msgstr "àudio;aplicació;gravació	;"
 
 #: ../src/application.js:43
 msgid "SoundRecorder"
 msgstr "Enregistradora de so"
 
-#: ../src/application.js:50 ../src/preferences.js:39
+#: ../src/application.js:50 ../src/preferences.js:40
 msgid "Preferences"
 msgstr "Preferències"
 
@@ -119,204 +143,235 @@ msgstr "Ix"
 msgid "Sound Recorder started"
 msgstr "S'ha iniciat l'enregistradora de so"
 
-#. Translators: "Recordings" here refers to the name of the directory where the application places files */
-#: ../src/application.js:89
+#. Translators: "Recordings" here refers to the name of the directory where the application places files
+#: ../src/application.js:93
 msgid "Recordings"
 msgstr "Enregistraments"
 
-#. Translators: Replace "translator-credits" with your names, one name per line */
-#: ../src/application.js:154
+#. Translators: Replace "translator-credits" with your names, one name per line
+#: ../src/application.js:167
 msgid "translator-credits"
 msgstr "Pau Iranzo <pau.iranzo@softcatala.org>"
 
-#: ../src/fileUtil.js:89
+#: ../src/fileUtil.js:88
 msgid "Yesterday"
 msgstr "Ahir"
 
-#: ../src/fileUtil.js:91
+#: ../src/fileUtil.js:90
 #, javascript-format
 msgid "%d day ago"
 msgid_plural "%d days ago"
 msgstr[0] "fa %d dia"
 msgstr[1] "fa %d dies"
 
-#: ../src/fileUtil.js:95
+#: ../src/fileUtil.js:94
 msgid "Last week"
 msgstr "Darrera setmana"
 
-#: ../src/fileUtil.js:97
+#: ../src/fileUtil.js:96
 #, javascript-format
 msgid "%d week ago"
 msgid_plural "%d weeks ago"
 msgstr[0] "fa %d setmana"
 msgstr[1] "fa %d setmanes"
 
-#: ../src/fileUtil.js:101
+#: ../src/fileUtil.js:100
 msgid "Last month"
 msgstr "Darrer mes"
 
-#: ../src/fileUtil.js:103
+#: ../src/fileUtil.js:102
 #, javascript-format
 msgid "%d month ago"
 msgid_plural "%d months ago"
 msgstr[0] "fa %d mes"
 msgstr[1] "fa %d mesos"
 
-#: ../src/fileUtil.js:107
+#: ../src/fileUtil.js:106
 msgid "Last year"
 msgstr "Darrer any"
 
-#: ../src/fileUtil.js:109
+#: ../src/fileUtil.js:108
 #, javascript-format
 msgid "%d year ago"
 msgid_plural "%d years ago"
 msgstr[0] "fa %d any"
 msgstr[1] "fa %d anys"
 
-#: ../src/info.js:46 ../src/mainWindow.js:508
+#: ../src/info.js:44 ../src/mainWindow.js:515
 msgid "Info"
 msgstr "Informació"
 
-#: ../src/info.js:55
+#: ../src/info.js:48
 msgid "Cancel"
 msgstr "Cancel·la"
 
-#: ../src/info.js:69 ../src/mainWindow.js:291
+#. finish button (stop recording)
+#: ../src/info.js:53 ../src/mainWindow.js:314
 msgid "Done"
 msgstr "Fet"
 
-#: ../src/info.js:95
+#. File Name item
+#. Translators: "File Name" is the label next to the file name
+#. in the info dialog
+#: ../src/info.js:80
 msgctxt "File Name"
 msgid "Name"
 msgstr "Nom"
 
-#: ../src/info.js:102
+#. Source item
+#: ../src/info.js:87
 msgid "Source"
 msgstr "Font"
 
-#: ../src/info.js:111
+#. Date Modified item
+#: ../src/info.js:96
 msgid "Date Modified"
 msgstr "Data de modificació"
 
-#: ../src/info.js:117
+#. Date Created item
+#: ../src/info.js:102
 msgid "Date Created"
 msgstr "Data de creació"
 
-#: ../src/info.js:128
+#. Media type item
+#. Translators: "Type" is the label next to the media type
+#. (Ogg Vorbis, AAC, ...) in the info dialog
+#: ../src/info.js:113
 msgctxt "Media Type"
 msgid "Type"
 msgstr "Tipus"
 
-#: ../src/listview.js:120 ../src/listview.js:215
-msgid "%Y-%m-%d %H:%M:%S"
-msgstr "%d-%m-%Y %H:%M:%S"
+#. Media type data
+#: ../src/info.js:152
+msgid "Unknown"
+msgstr "Desconegut"
 
-#: ../src/mainWindow.js:111 ../src/mainWindow.js:777
+#: ../src/mainWindow.js:113 ../src/mainWindow.js:794
 msgid "Record"
-msgstr "Enregistra"
+msgstr "Grava"
 
-#: ../src/mainWindow.js:147
+#: ../src/mainWindow.js:149
 msgid "Add Recordings"
 msgstr "Afig enregistraments"
 
-#: ../src/mainWindow.js:152
+#: ../src/mainWindow.js:154
 msgid "Use the <b>Record</b> button to make sound recordings"
-msgstr "Utilitzeu el botó <b>Enregistra</b> per crear enregistraments d'àudio"
+msgstr "Utilitzeu el botó <b>Grava</b> per crear enregistraments d'àudio"
 
-#: ../src/mainWindow.js:277
+#: ../src/mainWindow.js:300
 msgid "Recording…"
-msgstr "S'està enregistrant…"
+msgstr "S'està gravant…"
 
-#: ../src/mainWindow.js:330
+#. Translators: This is the title in the headerbar
+#: ../src/mainWindow.js:352
 #, javascript-format
 msgid "%d Recorded Sound"
 msgid_plural "%d Recorded Sounds"
-msgstr[0] "%d àudio enregistrat"
-msgstr[1] "%d àudios enregistrats"
+msgstr[0] "%d àudio gravat"
+msgstr[1] "%d àudios gravats"
 
-#: ../src/mainWindow.js:394
+#: ../src/mainWindow.js:401
 msgid "Play"
 msgstr "Reprodueix"
 
-#: ../src/mainWindow.js:414
+#: ../src/mainWindow.js:422
 msgid "Pause"
 msgstr "Fes una pausa"
 
-#: ../src/mainWindow.js:521
+#: ../src/mainWindow.js:530
 msgid "Delete"
 msgstr "Suprimeix"
 
-#: ../src/mainWindow.js:812
+#: ../src/mainWindow.js:829
 msgid "Ogg Vorbis"
 msgstr "Ogg Vorbis"
 
-#: ../src/mainWindow.js:812
+#: ../src/mainWindow.js:829
 msgid "Opus"
 msgstr "Opus"
 
-#: ../src/mainWindow.js:812
+#: ../src/mainWindow.js:829
 msgid "FLAC"
 msgstr "FLAC"
 
-#: ../src/mainWindow.js:812
+#: ../src/mainWindow.js:829
 msgid "MP3"
 msgstr "MP3"
 
-#: ../src/mainWindow.js:812
+#: ../src/mainWindow.js:829
 msgid "MOV"
 msgstr "MOV"
 
-#: ../src/mainWindow.js:836
+#: ../src/mainWindow.js:853
+msgid "Mono"
+msgstr "Mono"
+
+#: ../src/mainWindow.js:853
+msgid "Stereo"
+msgstr "Estèreo"
+
+#: ../src/mainWindow.js:877
 msgid "Load More"
 msgstr "Carrega'n més"
 
 #: ../src/play.js:89
 msgid "Unable to play recording"
-msgstr "No es pot reproduir l'enregistrament"
+msgstr "No es pot reproduir l'gravació	"
 
-#: ../src/preferences.js:63
+#: ../src/preferences.js:64
 msgid "Preferred format"
 msgstr "Format preferit"
 
-#: ../src/preferences.js:71
+#: ../src/preferences.js:72
+msgid "Default mode"
+msgstr "Mode per defecte"
+
+#: ../src/preferences.js:80
 msgid "Volume"
 msgstr "Volum"
 
-#: ../src/preferences.js:86
+#: ../src/preferences.js:95
 msgid "Microphone"
 msgstr "Micròfon"
 
-#: ../src/record.js:66
+#: ../src/record.js:71
 msgid "Unable to create Recordings directory."
 msgstr "No s'ha pogut crear el directori «Enregistraments»."
 
-#: ../src/record.js:75
+#: ../src/record.js:84
+msgid "Please install the GStreamer 1.0 PulseAudio plugin."
+msgstr "Instal·leu el connector PulseAudio de GStreamer 1.0."
+
+#: ../src/record.js:86
 msgid "Your audio capture settings are invalid."
 msgstr "Els paràmetres de captura d'àudio no són vàlids."
 
-#: ../src/record.js:122
+#: ../src/record.js:137
 msgid "Not all elements could be created."
 msgstr "No s'han pogut crear tots els elements."
 
-#: ../src/record.js:133
-msgid "Not all of the elements were linked"
-msgstr "No s'han pogut enllaçar tots els elements"
+#: ../src/record.js:149
+msgid "Not all of the elements were linked."
+msgstr "No tots els elements estaven enllaçats."
 
-#: ../src/record.js:158
+#: ../src/record.js:174
 msgid "No Media Profile was set."
 msgstr "No s'ha establit cap perfil de format."
 
-#: ../src/record.js:169
+#: ../src/record.js:185
 msgid ""
 "Unable to set the pipeline \n"
-" to the recording state"
+" to the recording state."
 msgstr ""
 "No s'ha pogut establir la canonada \n"
-"a l'estat d'enregistrament"
+"a l'estat d'gravació	."
 
 #. Translators: ""Clip %d"" is the default name assigned to a file created
-#. by the application (for example, "Clip 1"). */
-#: ../src/record.js:318
+#. by the application (for example, "Clip 1").
+#: ../src/record.js:364
 #, javascript-format
 msgid "Clip %d"
 msgstr "Retall %d"
+
+#~ msgid "%Y-%m-%d %H:%M:%S"
+#~ msgstr "%d-%m-%Y %H:%M:%S"
